--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
       "@types/react-dom": "^18.0.10",
       "axios": "^1.3.4",
       "firebase": "^9.20.0",
+      "headbreaker": "^2.0.0",
+      "konva": "^9.1.0",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
       "react-icons": "^4.8.0",
-      "react-query": "^3.39.3",
+      "react-konva": "^18.2.8",
       "react-router-dom": "^6.8.1",
       "react-scripts": "5.0.1",
       "typescript": "^4.9.5",
